fix(app): fix file preview in buy modal & letter spacing

--- a/src/app.css
+++ b/src/app.css
@@ -8,7 +8,7 @@ body {
 
 body,
 button {
-  letter-spacing: -1px;
+  letter-spacing: -0.025em;
 }
 
 body::-webkit-scrollbar {
